8224851: AArch64: fix warnings and errors with Clang and GCC 8.3

Reviewed-by: aph, kbarrett